# pyfluids

./: .cspell.json  PyPI.md  README.md  pyproject.toml
.github/workflows/: build-tests.yml  ci.yml  publish.yml
.zed/: settings.json  tasks.json  tasks.py
src/pyfluids/config/: __init__.py  config.py  pyfluids_config_builder.py  unit_converter.py
src/pyfluids/enums/: fluids_list.py  phases.py
src/pyfluids/fluids/: abstract_fluid.py  fluid.py  mixture.py
src/pyfluids/humid_air/: humid_air.py
src/pyfluids/io/: abstract_input.py  input.py  input_humid_air.py
tests/config/: test_config.py  test_pyfluids_config_builder.py  test_unit_converter.py
tests/enums/: test_fluids_list.py
tests/fluids/: test_fluid.py  test_fluid_extended.py  test_mixture.py  test_mixture_processes.py
tests/io/: test_input.py  test_input_extended.py
